--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ Statistics/4_7_million_dimer_hist.pdf
 *.xlsx
 *.o
 *.e
+Statistics/R_Graphs/Multidomain only/lama1
+*.R
+Statistics/R_Graphs/Overall/LAMA1
+Statistics/R_Graphs/Overall/LAMA2
+Statistics/Plot_Making.RData
